--- a/templates/book_details.html
+++ b/templates/book_details.html
@@ -31,13 +31,13 @@
 </head>
 <body>
     <div class="details">
-        <h1>{{ book['Title'] }}</h1>
-        <h2>By {{ book['Authors'] }}</h2>
-        <p><strong>Description:</strong> {{ book['Description'] }}</p>
-        <p><strong>Category:</strong> {{ book['Category'] }}</p>
-        <p><strong>Publisher:</strong> {{ book['Publisher'] }}</p>
-        <p><strong>Price:</strong> ${{ book['Price Starting With ($)'] }}</p>
-        <p><strong>Publish Date:</strong> {{ book['Publish Date (Month)'] }} {{ book['Publish Date (Year)'] }}</p>
+        <h1>{{ book['title'] }}</h1>
+        <h2>By {{ book['authors'] }}</h2>
+        <p><strong>Description:</strong> {{ book['description'] }}</p>
+        <p><strong>Category:</strong> {{ book['category'] }}</p>
+        <p><strong>Publisher:</strong> {{ book['publisher'] }}</p>
+        <p><strong>Price:</strong> ${{ book['price'] }}</p>
+        <p><strong>Publish Date:</strong> {{ book['publish_month'] }} {{ book['publish_year'] }}</p>
     </div>
 </body>
 </html>
