--- a/templates/store.html
+++ b/templates/store.html
@@ -35,18 +35,17 @@
         .btn:hover {
             background-color: #0056b3;
         }
-        .search-bar, .slider-container {
+        .search-bar {
             text-align: center;
             margin-top: 20px;
-            margin-bottom: 20px;
         }
-        .search-bar input[type="text"], .slider-container input[type="range"] {
+        .search-bar input[type="text"] {
             padding: 10px;
             width: 300px;
             border: 1px solid #ddd;
             border-radius: 5px;
         }
-        .search-bar input[type="submit"], .slider-container input[type="submit"] {
+        .search-bar input[type="submit"] {
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
@@ -54,7 +53,7 @@
             color: white;
             cursor: pointer;
         }
-        .search-bar input[type="submit"]:hover, .slider-container input[type="submit"]:hover {
+        .search-bar input[type="submit"]:hover{
             background-color: #0056b3;
         }
         .hidden {
@@ -82,14 +81,17 @@
 
         
         .filter-options input[type="number"] {
-            padding: 10px;
+            padding: auto;            
             width: 100px;
             border: 1px solid #ddd;
             border-radius: 5px;
         }
-        
 
+      
+  
+       
         .price-range {
+            margin-top: 20px;
             display: flex;
             align-items: center;
             padding-bottom: 20px;
