--- a/templates/store.html
+++ b/templates/store.html
@@ -139,5 +139,10 @@
             </form>
         </div>
     </div>
+</div>
+<a href="{{ url_for('view_cart') }}" style="position: absolute; top: 10px; right: 10px;">
+    <img src="/static/cart_icon.png" alt="Cart" style="width: 30px;">
+</a>
+</div>
 </body>
 </html>
