--- a/templates/book_details.html
+++ b/templates/book_details.html
@@ -38,6 +38,12 @@
         <p><strong>Publisher:</strong> {{ book['publisher'] }}</p>
         <p><strong>Price:</strong> ${{ book['price'] }}</p>
         <p><strong>Publish Date:</strong> {{ book['publish_month'] }} {{ book['publish_year'] }}</p>
+        <form action="{{ url_for('add_to_cart', book_id=book['id']) }}" method="POST">
+            <button type="submit">Add to Cart</button>
+        </form>
     </div>
+    <a href="{{ url_for('view_cart') }}" style="position: absolute; top: 10px; right: 10px;">
+        <img src="/static/cart_icon.png" alt="Cart" style="width: 30px;">
+    </a>
 </body>
 </html>
