--- a/templates/books.html
+++ b/templates/books.html
@@ -48,11 +48,13 @@
             {% endfor %}
         </select>
         <input type="submit" value="Search">
-    </form>
-    <ul>
-        {% for book_id, title in titles %}
-        <li><a href="{{ url_for('book_details', book_id=book_id) }}">{{ title }}</a></li>
-        {% endfor %}
-    </ul>
-</body>
+        <ul>
+            {% for book_id, title in titles %}
+            <li><a href="{{ url_for('book_details', book_id=book_id) }}">{{ title }}</a></li>
+            {% endfor %}
+        </ul>
+        <a href="{{ url_for('view_cart') }}" style="position: absolute; top: 10px; right: 10px;">
+            <img src="/static/cart_icon.png" alt="Cart" style="width: 30px;">
+        </a>
+    </body>
 </html>
