fix glitch flash

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -38,6 +38,14 @@
         .form-container input[type="submit"]:hover {
             background-color: #0056b3;
         }
+        .error {
+            color: red;
+            margin-top: 10px;
+        }
+        .success {
+            color: green;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -55,11 +63,15 @@
                 <input type="submit" value="Change Password">
             </div>
         </form>
-        {% with messages = get_flashed_messages() %}
+        {% with messages = flashed_messages %}
           {% if messages %}
             <ul>
-            {% for message in messages %}
-              <li>{{ message }}</li>
+            {% for category, message in messages %}
+              {% if category == 'success' %}
+                <li class="success">{{ message }}</li>
+              {% else %}
+                <li class="error">{{ message }}</li>
+              {% endif %}
             {% endfor %}
             </ul>
           {% endif %}
