--- a/templates/cart.html
+++ b/templates/cart.html
@@ -60,6 +60,8 @@
         <form action="{{ url_for('clear_cart') }}" method="POST">
             <button type="submit">Clear Cart</button>
         </form>
+        <!-- Back Arrow -->
+    <a href="javascript:void(0);" onclick="window.history.back();" style="position: absolute; top: 10px; left: 10px; font-size: 20px; text-decoration: none;">&larr;</a>
     </div>
 </body>
 </html>
