--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -77,5 +77,7 @@
           {% endif %}
         {% endwith %}
     </div>
+    <!-- Back Arrow -->
+    <a href="javascript:void(0);" onclick="window.history.back();" style="position: absolute; top: 10px; left: 10px; font-size: 20px; text-decoration: none;">&larr;</a>
 </body>
 </html>
